src/main/antlr/org/gustavolyra/.antlr/PortugolPPParser.java
// Generated from c:/Users/gusta/IdeaProjects/p_mais_mais/src/main/antlr/org/gustavolyra/PortugolPP.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PortugolPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, ID=51, NUMERO=52, TEXTO_LITERAL=53, 
		ESPACO=54, COMENTARIO=55, COMENTARIO_BLOCO=56;
	public static final int
		RULE_programa = 0, RULE_declaracao = 1, RULE_assinaturaMetodo = 2, RULE_declaracaoInterface = 3, 
		RULE_declaracaoQuebra = 4, RULE_declaracaoContinue = 5, RULE_declaracaoFacaEnquanto = 6, 
		RULE_declaracaoPara = 7, RULE_declaracaoEnquanto = 8, RULE_declaracaoSe = 9, 
		RULE_declaracaoReturn = 10, RULE_declaracaoClasse = 11, RULE_declaracaoVar = 12, 
		RULE_declaracaoFuncao = 13, RULE_listaParams = 14, RULE_param = 15, RULE_tipo = 16, 
		RULE_bloco = 17, RULE_expressao = 18, RULE_atribuicao = 19, RULE_acesso = 20, 
		RULE_acessoArray = 21, RULE_logicaOu = 22, RULE_logicaE = 23, RULE_igualdade = 24, 
		RULE_comparacao = 25, RULE_adicao = 26, RULE_multiplicacao = 27, RULE_unario = 28, 
		RULE_chamada = 29, RULE_chamadaFuncao = 30, RULE_argumentos = 31, RULE_primario = 32, 
		RULE_listaLiteral = 33, RULE_mapaLiteral = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracao", "assinaturaMetodo", "declaracaoInterface", 
			"declaracaoQuebra", "declaracaoContinue", "declaracaoFacaEnquanto", "declaracaoPara", 
			"declaracaoEnquanto", "declaracaoSe", "declaracaoReturn", "declaracaoClasse", 
			"declaracaoVar", "declaracaoFuncao", "listaParams", "param", "tipo", 
			"bloco", "expressao", "atribuicao", "acesso", "acessoArray", "logicaOu", 
			"logicaE", "igualdade", "comparacao", "adicao", "multiplicacao", "unario", 
			"chamada", "chamadaFuncao", "argumentos", "primario", "listaLiteral", 
			"mapaLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'funcao'", "'('", "')'", "':'", "'interface'", "'{'", "'}'", 
			"'quebra'", "'continue'", "'faca'", "'enquanto'", "'para'", "'se'", "'senao'", 
			"'return'", "'classe'", "'estende'", "'implementa'", "','", "'var'", 
			"'='", "'Inteiro'", "'Real'", "'Texto'", "'Logico'", "'Lista'", "'Mapa'", 
			"'.'", "'['", "']'", "'ou'", "'e'", "'=='", "'!='", "'<'", "'<='", "'>'", 
			"'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'verdadeiro'", "'falso'", 
			"'this'", "'nova'", "'[['"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "ID", "NUMERO", "TEXTO_LITERAL", "ESPACO", "COMENTARIO", 
			"COMENTARIO_BLOCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PortugolPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PortugolPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PortugolPPParser.EOF, 0); }
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17981414236716748L) != 0)) {
				{
				{
				setState(70);
				declaracao();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoClasseContext declaracaoClasse() {
			return getRuleContext(DeclaracaoClasseContext.class,0);
		}
		public DeclaracaoVarContext declaracaoVar() {
			return getRuleContext(DeclaracaoVarContext.class,0);
		}
		public DeclaracaoFuncaoContext declaracaoFuncao() {
			return getRuleContext(DeclaracaoFuncaoContext.class,0);
		}
		public DeclaracaoSeContext declaracaoSe() {
			return getRuleContext(DeclaracaoSeContext.class,0);
		}
		public ChamadaFuncaoContext chamadaFuncao() {
			return getRuleContext(ChamadaFuncaoContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoReturnContext declaracaoReturn() {
			return getRuleContext(DeclaracaoReturnContext.class,0);
		}
		public DeclaracaoEnquantoContext declaracaoEnquanto() {
			return getRuleContext(DeclaracaoEnquantoContext.class,0);
		}
		public DeclaracaoParaContext declaracaoPara() {
			return getRuleContext(DeclaracaoParaContext.class,0);
		}
		public DeclaracaoFacaEnquantoContext declaracaoFacaEnquanto() {
			return getRuleContext(DeclaracaoFacaEnquantoContext.class,0);
		}
		public DeclaracaoQuebraContext declaracaoQuebra() {
			return getRuleContext(DeclaracaoQuebraContext.class,0);
		}
		public DeclaracaoContinueContext declaracaoContinue() {
			return getRuleContext(DeclaracaoContinueContext.class,0);
		}
		public DeclaracaoInterfaceContext declaracaoInterface() {
			return getRuleContext(DeclaracaoInterfaceContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				declaracaoClasse();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				declaracaoVar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				declaracaoFuncao();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				declaracaoSe();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				chamadaFuncao();
				setState(83);
				match(T__0);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				bloco();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				expressao();
				setState(87);
				match(T__0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(89);
				declaracaoReturn();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(90);
				declaracaoEnquanto();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(91);
				declaracaoPara();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(92);
				declaracaoFacaEnquanto();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(93);
				declaracaoQuebra();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(94);
				declaracaoContinue();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(95);
				declaracaoInterface();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssinaturaMetodoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PortugolPPParser.ID, 0); }
		public ListaParamsContext listaParams() {
			return getRuleContext(ListaParamsContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public AssinaturaMetodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assinaturaMetodo; }
	}

	public final AssinaturaMetodoContext assinaturaMetodo() throws RecognitionException {
		AssinaturaMetodoContext _localctx = new AssinaturaMetodoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assinaturaMetodo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__1);
			setState(99);
			match(ID);
			setState(100);
			match(T__2);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(101);
				listaParams();
				}
			}

			setState(104);
			match(T__3);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(105);
				match(T__4);
				setState(106);
				tipo();
				}
			}

			setState(109);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoInterfaceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PortugolPPParser.ID, 0); }
		public List<AssinaturaMetodoContext> assinaturaMetodo() {
			return getRuleContexts(AssinaturaMetodoContext.class);
		}
		public AssinaturaMetodoContext assinaturaMetodo(int i) {
			return getRuleContext(AssinaturaMetodoContext.class,i);
		}
		public DeclaracaoInterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoInterface; }
	}

	public final DeclaracaoInterfaceContext declaracaoInterface() throws RecognitionException {
		DeclaracaoInterfaceContext _localctx = new DeclaracaoInterfaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracaoInterface);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__5);
			setState(112);
			match(ID);
			setState(113);
			match(T__6);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(114);
				assinaturaMetodo();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoQuebraContext extends ParserRuleContext {
		public DeclaracaoQuebraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoQuebra; }
	}

	public final DeclaracaoQuebraContext declaracaoQuebra() throws RecognitionException {
		DeclaracaoQuebraContext _localctx = new DeclaracaoQuebraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracaoQuebra);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__8);
			setState(123);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContinueContext extends ParserRuleContext {
		public DeclaracaoContinueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoContinue; }
	}

	public final DeclaracaoContinueContext declaracaoContinue() throws RecognitionException {
		DeclaracaoContinueContext _localctx = new DeclaracaoContinueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracaoContinue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__9);
			setState(126);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoFacaEnquantoContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoFacaEnquantoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoFacaEnquanto; }
	}

	public final DeclaracaoFacaEnquantoContext declaracaoFacaEnquanto() throws RecognitionException {
		DeclaracaoFacaEnquantoContext _localctx = new DeclaracaoFacaEnquantoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracaoFacaEnquanto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__10);
			setState(129);
			declaracao();
			setState(130);
			match(T__11);
			setState(131);
			match(T__2);
			setState(132);
			expressao();
			setState(133);
			match(T__3);
			setState(134);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoParaContext extends ParserRuleContext {
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public DeclaracaoVarContext declaracaoVar() {
			return getRuleContext(DeclaracaoVarContext.class,0);
		}
		public DeclaracaoParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoPara; }
	}

	public final DeclaracaoParaContext declaracaoPara() throws RecognitionException {
		DeclaracaoParaContext _localctx = new DeclaracaoParaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracaoPara);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__12);
			setState(137);
			match(T__2);
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
				{
				setState(138);
				declaracaoVar();
				}
				break;
			case T__2:
			case T__29:
			case T__40:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__49:
			case ID:
			case NUMERO:
			case TEXTO_LITERAL:
				{
				setState(139);
				expressao();
				setState(140);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(144);
			expressao();
			setState(145);
			match(T__0);
			setState(146);
			expressao();
			setState(147);
			match(T__3);
			setState(148);
			declaracao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoEnquantoContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public DeclaracaoEnquantoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoEnquanto; }
	}

	public final DeclaracaoEnquantoContext declaracaoEnquanto() throws RecognitionException {
		DeclaracaoEnquantoContext _localctx = new DeclaracaoEnquantoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracaoEnquanto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__11);
			setState(151);
			match(T__2);
			setState(152);
			expressao();
			setState(153);
			match(T__3);
			setState(154);
			declaracao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoSeContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public DeclaracaoSeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoSe; }
	}

	public final DeclaracaoSeContext declaracaoSe() throws RecognitionException {
		DeclaracaoSeContext _localctx = new DeclaracaoSeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaracaoSe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__13);
			setState(157);
			match(T__2);
			setState(158);
			expressao();
			setState(159);
			match(T__3);
			setState(160);
			declaracao();
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(161);
				match(T__14);
				setState(162);
				declaracao();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoReturnContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoReturn; }
	}

	public final DeclaracaoReturnContext declaracaoReturn() throws RecognitionException {
		DeclaracaoReturnContext _localctx = new DeclaracaoReturnContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declaracaoReturn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__15);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17981414234390536L) != 0)) {
				{
				setState(166);
				expressao();
				}
			}

			setState(169);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoClasseContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PortugolPPParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PortugolPPParser.ID, i);
		}
		public List<DeclaracaoVarContext> declaracaoVar() {
			return getRuleContexts(DeclaracaoVarContext.class);
		}
		public DeclaracaoVarContext declaracaoVar(int i) {
			return getRuleContext(DeclaracaoVarContext.class,i);
		}
		public List<DeclaracaoFuncaoContext> declaracaoFuncao() {
			return getRuleContexts(DeclaracaoFuncaoContext.class);
		}
		public DeclaracaoFuncaoContext declaracaoFuncao(int i) {
			return getRuleContext(DeclaracaoFuncaoContext.class,i);
		}
		public DeclaracaoClasseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoClasse; }
	}

	public final DeclaracaoClasseContext declaracaoClasse() throws RecognitionException {
		DeclaracaoClasseContext _localctx = new DeclaracaoClasseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_declaracaoClasse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__16);
			setState(172);
			match(ID);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(173);
				match(T__17);
				setState(174);
				match(ID);
				}
			}

			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(177);
				match(T__18);
				setState(178);
				match(ID);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__19) {
					{
					{
					setState(179);
					match(T__19);
					setState(180);
					match(ID);
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(188);
			match(T__6);
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==T__20) {
				{
				setState(191);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__20:
					{
					setState(189);
					declaracaoVar();
					}
					break;
				case T__1:
					{
					setState(190);
					declaracaoFuncao();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(196);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PortugolPPParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVar; }
	}

	public final DeclaracaoVarContext declaracaoVar() throws RecognitionException {
		DeclaracaoVarContext _localctx = new DeclaracaoVarContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_declaracaoVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			match(T__20);
			setState(199);
			match(ID);
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(200);
				match(T__4);
				setState(201);
				tipo();
				}
			}

			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(204);
				match(T__21);
				setState(205);
				expressao();
				}
			}

			setState(208);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoFuncaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PortugolPPParser.ID, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ListaParamsContext listaParams() {
			return getRuleContext(ListaParamsContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DeclaracaoFuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoFuncao; }
	}

	public final DeclaracaoFuncaoContext declaracaoFuncao() throws RecognitionException {
		DeclaracaoFuncaoContext _localctx = new DeclaracaoFuncaoContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_declaracaoFuncao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			match(T__1);
			setState(211);
			match(ID);
			setState(212);
			match(T__2);
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(213);
				listaParams();
				}
			}

			setState(216);
			match(T__3);
			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(217);
				match(T__4);
				setState(218);
				tipo();
				}
			}

			setState(221);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ListaParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaParams; }
	}

	public final ListaParamsContext listaParams() throws RecognitionException {
		ListaParamsContext _localctx = new ListaParamsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_listaParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
